@@ -259,6 +259,9 @@ Extension Modules
 Library
 -------
 
+- bpo-29623: Allow use of path-like object as a single argument in
+  ConfigParser.read().  Patch by David Ellis.
+
 - bpo-9303: Migrate sqlite3 module to _v2 API.  Patch by Aviv Palivoda.
 
 - bpo-28963: Fix out of bound iteration in asyncio.Future.remove_done_callback 
